default/objects/Additional_Hardware__c/Additional_Hardware__c.object-meta.xml
<CustomObject>
    <label>Additional Hardware</label>
    <nameField>
        <displayFormat>AHW-{000000}</displayFormat>
        <label>Additional Hardware</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Hardware</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>