default/objects/Additional_Hardware__c/fields/Acoustic_signaling_with_LED_Amount__c.field-meta.xml
<CustomField>
    <fullName>Acoustic_signaling_with_LED_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>LED diode for Acoustic signaling.</inlineHelpText>
    <label>Acoustic signaling with LED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>