default/objects/Additional_Hardware__c/fields/Acoustic_signaling_with_LED_Price__c.field-meta.xml
<CustomField>
    <fullName>Acoustic_signaling_with_LED_Price__c</fullName>
    <label>Acoustic signaling with LED Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>