default/objects/Additional_Hardware__c/fields/Adhesive_switch_P_S_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adhesive_switch_P_S_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Two-position adhesive switch P/S.</inlineHelpText>
    <label>Adhesive switch P/S</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>