default/objects/Additional_Hardware__c/fields/Adhesive_switch_P_S_Price__c.field-meta.xml
<CustomField>
    <fullName>Adhesive_switch_P_S_Price__c</fullName>
    <label>Adhesive switch P/S Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>