default/objects/Additional_Hardware__c/fields/Adhesive_switch_P_S_withDiode_LED_Amoun__c.field-meta.xml
<CustomField>
    <fullName>Adhesive_switch_P_S_withDiode_LED_Amoun__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Two-position adhesive switch P/S with LED diode.</inlineHelpText>
    <label>Adhesive switch P/S with a diode LED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>