default/objects/Additional_Hardware__c/fields/Antenna_GPS_FLAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Antenna_GPS_FLAT_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Antenna GPS FLAT.</inlineHelpText>
    <label>Antenna GPS FLAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>