default/objects/Additional_Hardware__c/fields/Antenna_GPS_Shark_Amount__c.field-meta.xml
<CustomField>
    <fullName>Antenna_GPS_Shark_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Antenna GPS Shark - Outdoor GPS antenna for roof installation.</inlineHelpText>
    <label>Antenna GPS Shark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>