default/objects/Additional_Hardware__c/fields/Antenna_GPS_Shark_Price__c.field-meta.xml
<CustomField>
    <fullName>Antenna_GPS_Shark_Price__c</fullName>
    <label>Antenna GPS Shark Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>