default/objects/Additional_Hardware__c/fields/Basic_switch_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basic_switch_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Basic two-position switch - invasive installation.</inlineHelpText>
    <label>Basic switch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>