default/objects/Additional_Hardware__c/fields/Basic_switch_Price__c.field-meta.xml
<CustomField>
    <fullName>Basic_switch_Price__c</fullName>
    <label>Basic switch Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>