default/objects/Additional_Hardware__c/fields/Button_Panic2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Button_Panic2_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Basic button used for send the threat message, when you press this button.</inlineHelpText>
    <label>Button Panic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>