default/objects/Additional_Hardware__c/fields/Button_Panic_Amount__c.field-meta.xml
<CustomField>
    <fullName>Button_Panic_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Basic button used for activation + 2 m cable.</inlineHelpText>
    <label>Button Panic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>