default/objects/Additional_Hardware__c/fields/Button_Panic_Price__c.field-meta.xml
<CustomField>
    <fullName>Button_Panic_Price__c</fullName>
    <label>Button Panic Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>