default/objects/Additional_Hardware__c/fields/BypassValidationForProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationForProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassValidationForProcessBuilder</label>
    <type>Checkbox</type>
</CustomField>