default/objects/Additional_Hardware__c/fields/Cable_CAN_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cable_CAN_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Cable for invasive connection to the rail CAN.</inlineHelpText>
    <label>Cable CAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>