default/objects/Additional_Hardware__c/fields/Cable_CAN_Price__c.field-meta.xml
<CustomField>
    <fullName>Cable_CAN_Price__c</fullName>
    <label>Cable CAN Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>