default/objects/Additional_Hardware__c/fields/Calibrating_transducer_PT100_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calibrating_transducer_PT100_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Calibrated single input transducer used for temperature measurement.</inlineHelpText>
    <label>Calibrating transducer PT100</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>