default/objects/Additional_Hardware__c/fields/Calibrating_transducer_PT100_Price__c.field-meta.xml
<CustomField>
    <fullName>Calibrating_transducer_PT100_Price__c</fullName>
    <label>Calibrating transducer PT100 Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>