default/objects/Additional_Hardware__c/fields/Can_Bus_transducer_MCB_02_Amount__c.field-meta.xml
<CustomField>
    <fullName>Can_Bus_transducer_MCB_02_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Transducer used for automatic guarding activation / deactivation of the vehicle according to the car lock.</inlineHelpText>
    <label>Can Bus transducer MCB-02</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>