default/objects/Additional_Hardware__c/fields/Can_Bus_transducer_MCB_02_Price__c.field-meta.xml
<CustomField>
    <fullName>Can_Bus_transducer_MCB_02_Price__c</fullName>
    <label>Can Bus transducer MCB-02 Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>