default/objects/Additional_Hardware__c/fields/CAN_GO_CLICK_Amount__c.field-meta.xml
<CustomField>
    <fullName>CAN_GO_CLICK_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Cable for non-contact connection to the rail CAN.</inlineHelpText>
    <label>CAN GO CLICK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>