default/objects/Additional_Hardware__c/fields/CAN_GO_CLICK_Price__c.field-meta.xml
<CustomField>
    <fullName>CAN_GO_CLICK_Price__c</fullName>
    <label>CAN GO CLICK Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>