default/objects/Additional_Hardware__c/fields/Dalas_chip_Amount__c.field-meta.xml
<CustomField>
    <fullName>Dalas_chip_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contact chip Dalas used for identification.</inlineHelpText>
    <label>Dalas chip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>