default/objects/Additional_Hardware__c/fields/Dalas_chip_Price__c.field-meta.xml
<CustomField>
    <fullName>Dalas_chip_Price__c</fullName>
    <label>Dalas chip Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>