default/objects/Additional_Hardware__c/fields/Guarding_cargo_space_Amount__c.field-meta.xml
<CustomField>
    <fullName>Guarding_cargo_space_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>When cabin is closed, the cargo space is guarded by using a microwave sensor that is connected to the GPS unit. In the case of alarm activation, a siren will sound and an SMS will be sent to two phone numbers.</inlineHelpText>
    <label>Guarding cargo space package</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>