default/objects/Additional_Hardware__c/fields/Guarding_cargo_space_Price__c.field-meta.xml
<CustomField>
    <fullName>Guarding_cargo_space_Price__c</fullName>
    <inlineHelpText>Without Carnet unit and installation.</inlineHelpText>
    <label>Guarding cargo space package Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>