default/objects/Additional_Hardware__c/fields/Guarding_the_vehicle_one_switch_Amount__c.field-meta.xml
<CustomField>
    <fullName>Guarding_the_vehicle_one_switch_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Hidden switch used to warn the owner of an unauthorized vehicle being set in motion, sending an SMS to any two phone numbers.</inlineHelpText>
    <label>Guarding the vehicle - one switch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>