default/objects/Additional_Hardware__c/fields/Guarding_the_vehicle_reader_Amount__c.field-meta.xml
<CustomField>
    <fullName>Guarding_the_vehicle_reader_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>RFID Reader used to warn the owner of an unauthorized vehicle being set in motion, sending an SMS to any two phone numbers in case that the driver can not be identified by using any or selected chips (max. 25 pcs).</inlineHelpText>
    <label>Guarding the vehicle - reader</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>