default/objects/Additional_Hardware__c/fields/Guarding_the_vehicle_reader_Price__c.field-meta.xml
<CustomField>
    <fullName>Guarding_the_vehicle_reader_Price__c</fullName>
    <label>Guarding the vehicle - reader Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>