default/objects/Additional_Hardware__c/fields/isEdited__c.field-meta.xml
<CustomField>
    <fullName>isEdited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEdited</label>
    <type>Checkbox</type>
</CustomField>