default/objects/Additional_Hardware__c/fields/Microwave_sensor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Microwave_sensor_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Microwave motion sensor.</inlineHelpText>
    <label>Microwave sensor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>