default/objects/Additional_Hardware__c/fields/Microwave_sensor_Price__c.field-meta.xml
<CustomField>
    <fullName>Microwave_sensor_Price__c</fullName>
    <label>Microwave sensor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>