default/objects/Additional_Hardware__c/fields/Piezoelectric_siren_Amount__c.field-meta.xml
<CustomField>
    <fullName>Piezoelectric_siren_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Acoustic sirena signaling in the absence of driver identification.</inlineHelpText>
    <label>Piezoelectric siren</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>