default/objects/Additional_Hardware__c/fields/Piezoelectric_siren_Price__c.field-meta.xml
<CustomField>
    <fullName>Piezoelectric_siren_Price__c</fullName>
    <label>Piezoelectric siren Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>