default/objects/Additional_Hardware__c/fields/Plastic_temperature_sensor_holder_Amount__c.field-meta.xml
<CustomField>
    <fullName>Plastic_temperature_sensor_holder_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount.</inlineHelpText>
    <label>Plastic temperature sensor holder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>