default/objects/Additional_Hardware__c/fields/Plastic_temperature_sensor_holder_Price__c.field-meta.xml
<CustomField>
    <fullName>Plastic_temperature_sensor_holder_Price__c</fullName>
    <label>Plastic temperature sensor holder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>