default/objects/Additional_Hardware__c/fields/Power_supply_power_cable_harnesses_Price__c.field-meta.xml
<CustomField>
    <fullName>Power_supply_power_cable_harnesses_Price__c</fullName>
    <label>Power supply power cable harnesses Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>