default/objects/Additional_Hardware__c/fields/Power_supplyPower_cable_harnesses_Amount__c.field-meta.xml
<CustomField>
    <fullName>Power_supplyPower_cable_harnesses_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Cable with fuse for GPS unit connection</inlineHelpText>
    <label>Power supply power cable harnesses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>