default/objects/Additional_Hardware__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Additional Hardware</relationshipLabel>
    <relationshipName>Additional_Hardware</relationshipName>
    <type>Lookup</type>
</CustomField>