default/objects/Additional_Hardware__c/fields/Reader_Dalas_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reader_Dalas_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contact reader Dalas</inlineHelpText>
    <label>Reader Dalas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>