default/objects/Additional_Hardware__c/fields/Reader_Dalas_Price__c.field-meta.xml
<CustomField>
    <fullName>Reader_Dalas_Price__c</fullName>
    <inlineHelpText>Contact reader for identification of the drivers.</inlineHelpText>
    <label>Reader Dalas Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>