default/objects/Additional_Hardware__c/fields/Reader_HIDProx_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reader_HIDProx_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contactless cards reader HIDProx</inlineHelpText>
    <label>Reader HIDProx</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>