default/objects/Additional_Hardware__c/fields/Reader_HIDProx_Price__c.field-meta.xml
<CustomField>
    <fullName>Reader_HIDProx_Price__c</fullName>
    <inlineHelpText>Non-contact cards reader HIDProx</inlineHelpText>
    <label>Reader HIDProx Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>