default/objects/Additional_Hardware__c/fields/Reader_Legic_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reader_Legic_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contactless cards reader Legic</inlineHelpText>
    <label>Reader Legic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>