default/objects/Additional_Hardware__c/fields/Reader_Legic_Price__c.field-meta.xml
<CustomField>
    <fullName>Reader_Legic_Price__c</fullName>
    <label>Reader Legic Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>