default/objects/Additional_Hardware__c/fields/Reader_Mifare_Price__c.field-meta.xml
<CustomField>
    <fullName>Reader_Mifare_Price__c</fullName>
    <label>Reader Mifare Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>