default/objects/Additional_Hardware__c/fields/Reader_Multi_125_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reader_Multi_125_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contactless cards reader Multi 125</inlineHelpText>
    <label>Reader Multi 125</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>