default/objects/Additional_Hardware__c/fields/Reader_Multi_ISO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reader_Multi_ISO_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contactless cards reader Multi ISO</inlineHelpText>
    <label>Reader Multi ISO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>