default/objects/Additional_Hardware__c/fields/Reader_Multi_ISO_Price__c.field-meta.xml
<CustomField>
    <fullName>Reader_Multi_ISO_Price__c</fullName>
    <label>Reader Multi ISO Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>