default/objects/Additional_Hardware__c/fields/Reader_RFID_Slim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reader_RFID_Slim_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contactless cards reader  RFID Slim (includes acoustic sirena)</inlineHelpText>
    <label>Reader RFID Slim</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>