default/objects/Additional_Hardware__c/fields/RFID_adhesive_chip_Amount__c.field-meta.xml
<CustomField>
    <fullName>RFID_adhesive_chip_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contactless adhesive chip RFID</inlineHelpText>
    <label>RFID adhesive chip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>