default/objects/Additional_Hardware__c/fields/RFID_adhesive_chip_Price__c.field-meta.xml
<CustomField>
    <fullName>RFID_adhesive_chip_Price__c</fullName>
    <label>RFID adhesive chip Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>