default/objects/Additional_Hardware__c/fields/RFID_fobs_Amount__c.field-meta.xml
<CustomField>
    <fullName>RFID_fobs_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Contactless chip RFID</inlineHelpText>
    <label>RFID fobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>