default/objects/Additional_Hardware__c/fields/RFID_fobs_Price__c.field-meta.xml
<CustomField>
    <fullName>RFID_fobs_Price__c</fullName>
    <label>RFID fobs Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>