default/objects/Additional_Hardware__c/fields/Siren_Alarm_Amount__c.field-meta.xml
<CustomField>
    <fullName>Siren_Alarm_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Alarm siren</inlineHelpText>
    <label>Siren Alarm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>