default/objects/Additional_Hardware__c/fields/Siren_Alarm_Price__c.field-meta.xml
<CustomField>
    <fullName>Siren_Alarm_Price__c</fullName>
    <label>Siren Alarm Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>