default/objects/Additional_Hardware__c/fields/Spare_battery_for_CN85_1_4_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spare_battery_for_CN85_1_4_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Internal spare battery for Carnet Unit</inlineHelpText>
    <label>Spare battery for CN85 1.4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>