default/objects/Additional_Hardware__c/fields/Spare_battery_for_CN85_1_4_Price__c.field-meta.xml
<CustomField>
    <fullName>Spare_battery_for_CN85_1_4_Price__c</fullName>
    <label>Spare battery for CN85 1.4 Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>