default/objects/Additional_Hardware__c/fields/Temperature_measurementCargoSpace_Amount__c.field-meta.xml
<CustomField>
    <fullName>Temperature_measurementCargoSpace_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Package used for monitoring of the temperature in the cargo space, for example during the transportation of goods. Includes all HW &amp; Installation. Temperature course is available in the vehicle&#39;s mileages.</inlineHelpText>
    <label>Temperature measurement cargo space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>