default/objects/Additional_Hardware__c/fields/Temperature_measurementCargoSpace_Price__c.field-meta.xml
<CustomField>
    <fullName>Temperature_measurementCargoSpace_Price__c</fullName>
    <label>Temperature measurement cargo sp. Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>