default/objects/Additional_Hardware__c/fields/Temperature_sensor_Dalas_Amount__c.field-meta.xml
<CustomField>
    <fullName>Temperature_sensor_Dalas_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Uncalibrated temperature sensor Dalas</inlineHelpText>
    <label>Temperature sensor Dalas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>