default/objects/Additional_Hardware__c/fields/Temperature_sensor_Pt100A_Amount__c.field-meta.xml
<CustomField>
    <fullName>Temperature_sensor_Pt100A_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Temperature sensor Pt100A - with 1m cable. Standard precision 0,125°C.</inlineHelpText>
    <label>Temperature sensor Pt100A with cable 1m</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>