default/objects/Additional_Hardware__c/fields/Temperature_sensor_Pt100B_Price__c.field-meta.xml
<CustomField>
    <fullName>Temperature_sensor_Pt100B_Price__c</fullName>
    <label>Temperature sensor Pt100B Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>