default/objects/Additional_Hardware__c/fields/X1_m_cable_to_the_temperature_Amount__c.field-meta.xml
<CustomField>
    <fullName>X1_m_cable_to_the_temperature_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>1 m cable to the temperature sensor - range of temperature measure -10 to 60°C.</inlineHelpText>
    <label>1 m cable to the temperature sensor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>