default/objects/Additional_Hardware__c/fields/X1_m_cable_to_the_temperature_Price__c.field-meta.xml
<CustomField>
    <fullName>X1_m_cable_to_the_temperature_Price__c</fullName>
    <label>1 m cable to the temp. sensor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>