default/objects/Additional_Hardware__c/fields/X1_m_silicone_cable_temp_sensor_Amount__c.field-meta.xml
<CustomField>
    <fullName>X1_m_silicone_cable_temp_sensor_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>1 m silicone cable to the temperature sensor - range of temperature measure -40 to 90°C.</inlineHelpText>
    <label>1 m silicone cable to the temp sensor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>