default/objects/Additional_Hardware__c/fields/X1_m_silicone_cable_temp_sensor_Price__c.field-meta.xml
<CustomField>
    <fullName>X1_m_silicone_cable_temp_sensor_Price__c</fullName>
    <label>1m silicone cable to the sensor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>